src/driver/ajinextek/AXL(Library)/C, C++/AXDev.h



//========== 표준 I/O 기기 커넥션 커맨드 =========================================================================
    // Network제품 각 재정열된 슬레이브 기기의 자동 억세스 모드 값을 설정하는 함수
    DWORD   __stdcall AxlM3SetStationAccessMode(long lBoardNo, long lModuleNo, BYTE bModuleType, BYTE bRWSMode);

    // Network제품 각 재정열된 슬레이브 기기의 자동 억세스 모드 설정값을 반환하는 함수
    DWORD   __stdcall AxlM3GetStationAccessMode(long lBoardNo, long lModuleNo, BYTE bModuleType, BYTE *bRWSMode);

    // Network제품 각 슬레이브 기기의 동기 자동 연결 모드를 설정하는 함수
    DWORD   __stdcall AxlM3SetAutoSyncConnectMode(long lBoardNo, long lModuleNo, BYTE bModuleType, DWORD dwAutoSyncConnectMode);

    // Network제품 각 슬레이브 기기의 동기 자동 연결 모드 설정값을 반환하는 함수
    DWORD   __stdcall AxlM3GetAutoSyncConnectMode(long lBoardNo, long lModuleNo, BYTE bModuleType, DWORD *dwpAutoSyncConnectMode);

    // Network제품 각 슬레이브 기기에 대한 단일 동기화 연결을 설정하는 함수
    DWORD   __stdcall AxlM3SyncConnectSingle(long lBoardNo, long lModuleNo, BYTE bModuleType);

    // Network제품 각 슬레이브 기기에 대한 단일 동기화 연결 끊음을 설정하는 함수
    DWORD   __stdcall AxlM3SyncDisconnectSingle(long lBoardNo, long lModuleNo, BYTE bModuleType);

    // Network제품 각 슬레이브 기기와의 연결 상태를 확인하는 함수
    DWORD   __stdcall AxlM3IsOnLine(long lBoardNo, long lModuleNo, DWORD *dwData);


//========== 표준 I/O 프로파일 커맨드 =========================================================================
    // Network제품 각 동기화 상태의 슬레이브 I/O 기기에 대한 데이터 설정값을 반환하는 함수
    DWORD   __stdcall AxlM3GetStationRWS(long lBoardNo, long lModuleNo, BYTE bModuleType, DWORD *pdwParam, BYTE bSize);

    // Network제품 각 동기화 상태의 슬레이브 I/O 기기에 대한 데이터값을 설정하는 함수
    DWORD   __stdcall AxlM3SetStationRWS(long lBoardNo, long lModuleNo, BYTE bModuleType, DWORD *pdwParam, BYTE bSize);

    // Network제품 각 비동기화 상태의 슬레이브 I/O 기기에 대한 데이터 설정값을 반환하는 함수
    DWORD   __stdcall AxlM3GetStationRWA(long lBoardNo, long lModuleNo, BYTE bModuleType, DWORD *pdwParam, BYTE bSize);

    // Network제품 각 비동기화 상태의 슬레이브 I/O 기기에 대한 데이터값을 설정하는 함수
    DWORD   __stdcall AxlM3SetStationRWA(long lBoardNo, long lModuleNo, BYTE bModuleType, DWORD *pdwParam, BYTE bSize);


    // MLIII adjustment operation을 설정 한다.
    // dwReqCode == 0x1005 : parameter initialization : 20sec
    // dwReqCode == 0x1008 : absolute encoder reset   : 5sec
    // dwReqCode == 0x100E : automatic offset adjustment of motor current detection signals  : 5sec
    // dwReqCode == 0x1013 : Multiturn limit setting  : 5sec
    DWORD   __stdcall AxmM3AdjustmentOperation(long lAxisNo, DWORD dwReqCode);


    // M3 전용 원점 검색 진행 상태 진단용 함수이다.
    DWORD    __stdcall AxmHomeGetM3FWRealRate(long lAxisNo, DWORD *upHomeMainStepNumber, DWORD *upHomeSubStepNumber, DWORD *upHomeLastMainStepNumber, DWORD *upHomeLastSubStepNumber);

	// M3 전용 원점 검색시 센서존에서 탈출시 보정되는 위치 값을 반환하는 함수이다.
    DWORD   __stdcall AxmHomeGetM3OffsetAvoideSenArea(long lAxisNo, double *dPos);

    // M3 전용 원점 검색시 센서존에서 탈출시 보정되는 위치 값을 설정하는 함수이다.
	// dPos 설정 값이 0이면 자동으로 탈출시 보정되는 위치 값은 자동으로 설정된다.
	// dPos 설정 값은 양수의 값만 입력한다.
	DWORD   __stdcall AxmHomeSetM3OffsetAvoideSenArea(long lAxisNo, double dPos);


	// M3 전용, 절대치 엔코더 사용 기준, 원점검색 완료 후 CMD/ACT POS 초기화 여부 설정
	// dwSel: 0, 원점 검색후 CMD/ACTPOS 0으로 설정됨.[초기값]
	// dwSel: 1, 원점 검색후 CMD/ACTPOS 값이 설정되지 않음.
	DWORD   __stdcall AxmM3SetAbsEncOrgResetDisable(long lAxisNo, DWORD dwSel);


	// M3 전용, 절대치 엔코더 사용 기준, 원점검색 완료 후 CMD/ACT POS 초기화 여부 설정값 가져오기
	// upSel: 0, 원점 검색후 CMD/ACTPOS 0으로 설정됨.[초기값]
	// upSel: 1, 원점 검색후 CMD/ACTPOS 값이 설정되지 않음.
	DWORD   __stdcall AxmM3GetAbsEncOrgResetDisable(long lAxisNo, DWORD *upSel);


	// M3 전용, 슬레이브 OFFLINE 전환시 알람 유지 기능 사용 유무 설정
	// dwSel: 0, ML3 슬레이브 ONLINE->OFFLINE 알람 처리 사용하지 않음.[초기값]
	// dwSel: 1, ML3 슬레이브 ONLINE->OFFLINE 알람 처리 사용

	DWORD   __stdcall AxmM3SetOfflineAlarmEnable(long lAxisNo, DWORD dwSel);

	// M3 전용, 슬레이브 OFFLINE 전환시 알람 유지 기능 사용 유무 설정 값 가져오기
	// upSel: 0, ML3 슬레이브 ONLINE->OFFLINE 알람 처리 사용하지 않음.[초기값]
	// upSel: 1, ML3 슬레이브 ONLINE->OFFLINE 알람 처리 사용

	DWORD   __stdcall AxmM3GetOfflineAlarmEnable(long lAxisNo, DWORD *upSel);


	// M3 전용, 슬레이브 OFFLINE 전환 여부 상태 값 가져오기
	// upSel: 0, ML3 슬레이브 ONLINE->OFFLINE 전환되지 않음
	// upSel: 1, ML3 슬레이브 ONLINE->OFFLINE 전환되었음.
	DWORD   __stdcall AxmM3ReadOnlineToOfflineStatus(long lAxisNo, DWORD *upStatus);


    // Network 제품의 Configuration Lock 상태를 설정한다.
    // wLockMode  : DISABLE(0), ENABLE(1)
    DWORD   __stdcall AxlSetLockMode(long lBoardNo, WORD wLockMode);


    // Lock 정보를 설정
    DWORD   __stdcall AxlSetLockData(long lBoardNo, DWORD dwTotalNodeNum, DWORD *dwpNodeNo, DWORD *dwpNodeID, DWORD *dwpLockData);


	DWORD   __stdcall AxmMoveStartPosWithAVC(long lAxisNo, double dPosition, double dMaxVelocity, double dMaxAccel, double dMinJerk, double *dpMoveVelocity, double *dpMoveAccel, double *dpMoveJerk);

    // 카운터 모듈의 2-D 절대위치 트리거 기능을 위해 필요한 트리거 위치 정보를 설정한다.
    // lChannelNo : 0,1 channel 일 경우 0, 2,3 channel 의 경우 2 를 설정. 
    // nDataCnt : 
    //  nDataCnt > 0 : 데이터 등록, nDataCnt <= 0 : 등록된 데이터 초기화.
    // dwOption : Reserved.
    // dpPatternData : (X1, Y1)
    DWORD  __stdcall AxcTriggerSetPatternData(long lChannelNo, long nDataCnt,  DWORD dwOption, double* dpPatternData);

    // 카운터 모듈의 2-D 절대위치 트리거 기능을 위해 필요한 트리거 위치 정보를 확인한다.
    DWORD  __stdcall AxcTriggerGetPatternData(long lChannelNo, long* npDataCnt,  DWORD* dwpOption, double* dpPatternData);


	//연속 보간 관련하여 AxmContiEndNode 함수내에서 보간구동관련 Node 를 Data Queue 에 미리 채워넣을 수 있도록하는 기능을 활성화 한다.
	//bPushPrevContiQueue : 1 // 해당 기능 활성화 
	//bPushPrevContiQueue : 0 // 해당 기능 비활성화 	
	DWORD __stdcall AxmContiSetPushPrevContiQueueEnable(long lCoordinate,BOOL bPushPrevContiQueue);

	//설정해둔 AxmContiSetPushPrevContiQueueEnable Flag값을 반환한다.	
	DWORD __stdcall AxmContiGetPushPrevContiQueueEnable(long lCoordinate,BOOL *bPushPrevContiQueue);


	// 연속보간 구동 시 Data Queue 에 Node 정보가 적재되었는지 상태를 반환한다.
	// AxmContiSetPushPrevContiQueueEnable(long lCoordinate, 1) 로 설정되어있을 경우만 유효
	// bPushPrevContiQueueComplete : 1 // Node Data 적재 완료
	// bPushPrevContiQueueComplete : 0 // Node Data 적재 되어있지않음
	DWORD __stdcall AxmContiGetPushPrevContiQueueComplete(long lCoordinate, BOOL * bPushPrevContiQueueComplete);

	
    // 연속보간 구동 시 첫 노드 시작 및 마지막 노드 시작 시 일정시간 이후 지정된 좌표계의 마스터 축의 OutputBit On/Off 제어
	// AxmContiBeginNode 앞에 호출해야 한다. 한번 구동하면 Flag가 초기화되어 다시 호출해야 사용할 수 있다.
    // StartTime/EndTime 단위는 [Sec]이며, 0 ~ 6.5초까지 설정 가능하다.
    // uOnoff	: 0 - 시작 위치에서 Bit On 종료 위치에서 Bit Off
    //          : 1 - 시작 위치에서 Bit Off 종료 위치에서 Bit On
    // lEndMode : 0 - 마지막 노드 구동 종료 후 즉시 OutputBit Off/On
    //			: 1 - 마지막 노드 구동 시작 후 입력한 EndTime 이후 OutputBit Off/On
    //			: 2 - 구동 시작 시 OutputBit On/Off 및 입력한 EndTime 이후 OutputBit Off/On
	DWORD __stdcall AxmContiSetWriteOutputBit(long lCoordinate, long lAxisNo, double dStartTime, double dEndTime, long lBitNo, long uOnoff, long lEndMode);


	// AxmContiSetWriteOutputBit로 설정한 값들을 반환한다.
	DWORD __stdcall	AxmContiGetWriteOutputBit(long lCoordinate, long* lpAxisNo, double* dpStartTime, double* dpEndTime, long* lpBitNo, long* lpOnoff, long* lpEndMode);


	// AxmContiSetWriteOutputBit로 설정한 값들을 리셋한다.
	DWORD __stdcall	AxmContiResetWriteOutputBit(long lCoordinate);


	// AxmMoveTorqueStop 함수로 토크 구동 정지 시 CmdPos 값을 ActPos 값과 일치시키는 시점까지의 대기 시간을 설정한다.
	// dwSettlingTime
	//  1) 단위: [msec]
	//  2) 입력 가능 범위: 0 ~ 10000
	//  *참고* AxmMoveTorqueSetStopSettlingTime 함수로 대기 시간을 설정하지 않으면, dafault 값인 10[msec]가 적용된다.
	DWORD __stdcall AxmMoveTorqueSetStopSettlingTime(long lAxisNo, DWORD dwSettlingTime);

	// AxmMoveTorqueStop 함수로 토크 구동 정지 시 CmdPos 값을 ActPos 값과 일치시키는 시점까지의 대기 시간을 반환한다.
	DWORD __stdcall AxmMoveTorqueGetStopSettlingTime(long lAxisNo, DWORD* dwpSettlingTime);


	//////////////////////////////////////////////////////////////////////////
	// Monitor  
	// 데이터를 수집을 진행할 항목을 추가합니다.
	DWORD  __stdcall AxlMonitorSetItem(long lBoardNo, long lItemIndex, DWORD dwSignalType, long lSignalNo, long lSubSignalNo);


	// 데이터 수집을 진행할 항목들에 관한 정보를 가져옵니다.
	DWORD  __stdcall AxlMonitorGetIndexInfo(long lBoardNo, long* lpItemSize, long* lpItemIndex);


	// 데이터 수집을 진행할 각 항목의 세부 설정을 가져옵니다.
	DWORD  __stdcall AxlMonitorGetItemInfo(long lBoardNo, long lItemIndex, DWORD* dwpSignalType, long* lpSignalNo, long* lpSubSignalNo);


	// 모든 데이터 수집 항목의 설정을 초기화합니다.
	DWORD  __stdcall AxlMonitorResetAllItem(long lBoardNo);


	// 선택된 데이터 수집 항목의 설정을 초기화합니다.
	DWORD  __stdcall AxlMonitorResetItem(long lBoardNo, long lItemIndex);


	// 데이터 수집의 트리거 조건을 설정합니다.
	DWORD  __stdcall AxlMonitorSetTriggerOption(long lBoardNo, DWORD dwSignalType, long lSignalNo, long lSubSignalNo, DWORD dwOperatorType, double dValue1, double dValue2);


	// 데이터 수집의 트리거 조건을 가져옵니다.
	//DWORD  __stdcall AxlMonitorGetTriggerOption(DWORD* dwpSignalType, long* lpSignalNo, long* lpSubSignalNo, DWORD* dwpOperatorType, double* dpValue1, double* dpValue2);

	// 데이터 수집의 트리거 조건을 초기화합니다.
	DWORD  __stdcall AxlMonitorResetTriggerOption(long lBoardNo);


	// 데이터 수집을 시작합니다.
	DWORD  __stdcall AxlMonitorStart(long lBoardNo, DWORD dwStartOption, DWORD dwOverflowOption);


	// 데이터 수집을 정지합니다.
	DWORD  __stdcall AxlMonitorStop(long lBoardNo);


	// 수집된 데이터를 가져옵니다.
	DWORD  __stdcall AxlMonitorReadData(long lBoardNo, long* lpItemSize, long* lpDataCount, double* dpReadData);


	// 데이터 수집의 주기를 가져옵니다.
	DWORD  __stdcall AxlMonitorReadPeriod(long lBoardNo, DWORD* dwpPeriod);